# trustflow

./: CMakeLists.txt  env.sh
docker/: trustflow-dev-ubuntu22.04.Dockerfile  trustflow-release-ubuntu22.04.Dockerfile
trustflow/attestation/: README.md
trustflow/attestation/verification/: BUILD.bazel  CMakeLists.txt
trustflow/attestation/verification/hyperenclave/: BUILD.bazel  CMakeLists.txt  hyperenclave_verifier.cc  hyperenclave_verifier.h  platform.cc  platform.h  sm2.cc  sm2.h  sm3.cc  sm3.h  type.h
trustflow/attestation/verification/wrapper/: BUILD.bazel  CMakeLists.txt  verifier_wrapper.cc  verifier_wrapper_c_api.cc
