# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "hyperenclave_verifier",
    srcs = ["hyperenclave_verifier.cc","sm2.cc", "sm3.cc", "platform.cc"],
    hdrs = ["hyperenclave_verifier.h","sm2.h","sm3.h","platform.h", "type.h"],
    deps = [
        "//trustflow/attestation/common:constants",
        "//trustflow/attestation/verification/interface:verifier",
        "@cppcodec",
        "@yacl//yacl/crypto/hash:ssl_hash",
    ],
)

